--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<!--
+			<exclusions>
+		        <exclusion>
+		            <groupId>org.springframework.boot</groupId>
+		            <artifactId>spring-boot-starter-logging</artifactId>
+		        </exclusion>
+    		</exclusions>
+    		-->
 		</dependency>
+
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -42,6 +52,29 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+<!-- uncomment to use log4j instead of default logback
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-log4j</artifactId>
+    		<version>1.3.8.RELEASE</version>
+		</dependency>  
+-->
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.0.0-M1</version>
+        </dependency>
+
+       <dependency>
+           <groupId>com.moelholm</groupId>
+           <artifactId>prometheus-spring-boot-starter</artifactId>
+           <version>1.0.1</version>
+       </dependency> 
 
 	</dependencies>
 
