--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<!--
+			<exclusions>
+		        <exclusion>
+		            <groupId>org.springframework.boot</groupId>
+		            <artifactId>spring-boot-starter-logging</artifactId>
+		        </exclusion>
+    		</exclusions>
+    		-->
 		</dependency>
+
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -46,8 +56,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
-
+<!-- uncomment to use log4j instead of default logback
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-log4j</artifactId>
+    		<version>1.3.8.RELEASE</version>
+		</dependency>  
+-->
 	</dependencies>
 
 
